--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "sharp": "^0.32.6",
     "slugify": "^1.6.6",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -40,7 +41,6 @@
     "@types/node": "^20.10.0",
     "@types/uuid": "^9.0.7",
     "prisma": "^5.6.0",
-    "tsx": "^4.20.6",
-    "typescript": "^5.3.0"
+    "tsx": "^4.20.6"
   }
 }
