--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@anthropic-ai/sdk": "^0.65.0",
     "@prisma/client": "^5.6.0",
     "cors": "^2.8.5",
+    "diff": "^5.1.0",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
