--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "prom-client": "^15.1.0",
     "sharp": "^0.32.6",
     "slugify": "^1.6.6",
+    "typescript": "^5.3.0",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4",
-    "typescript": "^5.3.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/diff": "^7.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.9",
