--- a/env.example
+++ b/env.example
@@ -66,7 +66,7 @@ REDIS_URL="rediss://default:AU9hAAIncDI3ZDE4YTRiYTYzN2M0N2VhYWVhM2JiY2FkMDQ2MGQz
 # Desenvolvimento:
 # ALLOWED_ORIGINS="http://localhost:8080,http://localhost:3000"
 # Produção (Render + seu domínio):
-ALLOWED_ORIGINS="https://snnap.com,https://www.snnap.com,https://snnap-backend.onrender.com,https://snnap-payments.onrender.com"
+ALLOWED_ORIGINS="https://snnap.com,https://www.snnap.com,https://snnap-backend.onrender.com,https://snnap-payments.onrender.com,https://snnap-frontend.onrender.com"
 
 # ========================================
 # SERVIDOR
