🔧 Fix production URLs and CORS configuration
✅ Updated production environment variables:
- Fixed ALLOWED_ORIGINS with correct Render URLs
- Added snnap.com and www.snnap.com to allowed origins
- Updated frame-ancestors CSP with production URLs

✅ Updated CORS fallback origins:
- Added production domains to CORS fallback
- Maintained localhost for development
- Ready for Render production deployment

🚀 Link AI microservice ready for production

--- a/env.production.example
+++ b/env.production.example
@@ -41,4 +41,4 @@ ANTHROPIC_API_KEY="your-anthropic-api-key"
 # ========================================
 # CORS
 # ========================================
-ALLOWED_ORIGINS="https://snnap-ai.onrender.com,https://snnap-pay.onrender.com,https://snnap-api.onrender.com"
+ALLOWED_ORIGINS="https://snnap.com,https://www.snnap.com,https://snnap-backend.onrender.com,https://snnap-link-ai.onrender.com,https://snnap-payments.onrender.com,https://snnap-frontend.onrender.com"
