docs: Adicionar variáveis de sincronização no Link AI
- Adicionar BACKEND_URL e INTERNAL_API_KEY
- Documentar configuração de sincronização automática

--- a/env.example
+++ b/env.example
@@ -75,6 +75,14 @@ PORT=3002
 # Sempre use 3002 para o microserviço
 
 # ========================================
+# SINCRONIZAÇÃO COM BACKEND
+# ========================================
+# URL do backend principal para sincronização de páginas
+BACKEND_URL="https://snnap-backend.onrender.com"
+# Chave de autenticação interna para sincronização
+INTERNAL_API_KEY="internal-sync-key-2025"
+
+# ========================================
 # AMBIENTE
 # ========================================
 # NODE_ENV="development"
