feat: redirecionar rota raiz para o frontend
- Redirecionar domínio raiz para FRONTEND_URL
- Adicionar variável FRONTEND_URL no render.yaml
- Adicionar variável BACKEND_URL no render.yaml
- Manter redirecionamento para /root em domínios customizados

Security: Não expor informações do microserviço

--- a/render.yaml
+++ b/render.yaml
@@ -35,6 +35,10 @@ services:
         sync: false
       - key: ALLOWED_ORIGINS
         value: https://snnap-ai.onrender.com,https://snnap-pay.onrender.com,https://snnap-api.onrender.com
+      - key: FRONTEND_URL
+        value: https://snnap-ai.onrender.com
+      - key: BACKEND_URL
+        value: https://snnap-backend.onrender.com
 
 databases:
   - name: snnap-link-ai-db
